--- a/styles.less
+++ b/styles.less
@@ -22,8 +22,52 @@ body {
       header {
         background-color: @LightGray;
         width: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
         height: 128px;
+
+        nav {
+          width: 70%;
+          height: 60%;
+          max-height: 70px;
+
+          ul {
+            display: flex;
+            justify-content: space-evenly;
+            align-items: center;
+            width: 100%;
+            height: 100%;
+
+            li {
+              list-style: none;
+
+              a {
+                text-decoration: none;
+                font-size: 18px;
+              }
+
+              button {
+                background-color: @Green;
+                border: none;
+                height: 35px;
+                width: 140px;
+                cursor: pointer;
+
+                &:hover {
+                  background-color: @DarkGreen;
+                }
+
+                a {
+                  color: #fff;
+                  font-size: 18px;
+                }
+              }
+            }
+          }
+        }
       }
+
       .banner {
         width: 100%;
         height: 1140px;
