--- a/styles.less
+++ b/styles.less
@@ -106,16 +106,16 @@ body {
       .group-cards {
         display: flex;
         justify-content: center;
-        width: fit-content;
+        width: 100%;
         height: fit-content;
+        padding: 0 10%;
         max-height: 400px;
-        margin: auto;
         position: absolute;
         bottom: -5%;
-        right: calc(50% - 653.5px);
 
         .cards {
-          width: 425px;
+          width: 33%;
+          max-width: 425px;
           height: 400px;
           background-color: @SaturedGreen;
 
