--- a/styles.less
+++ b/styles.less
@@ -153,25 +153,61 @@ body {
           }
         }
       }
+    }
+
+    .services-locations {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      width: 100%;
+      height: 100vh;
+
+      h1 {
+        font-size: 50px;
+      }
 
       .group-cards {
         display: flex;
         justify-content: center;
         width: 100%;
-        height: fit-content;
+        height: 70%;
         padding: 0 10%;
-        max-height: 400px;
+        margin: 32px 0 16px 0;
 
         .cards {
           width: 33%;
-          max-width: 425px;
-          height: 400px;
+          max-width: 414px;
+          height: 100%;
+          max-height: 648px;
+          position: relative;
           background-color: @SaturedGreen;
+          border: none;
+
+          img {
+            width: 100%;
+            height: 100%;
+          }
+
+          p {
+            width: 100%;
+            position: absolute;
+            bottom: 0;
+            margin: 0 0 16px 0;
+            font-size: 30px;
+            color: @LightGray;
+          }
 
           &:nth-child(2) {
             margin: 0 16px;
           }
         }
+      }
+
+      p {
+        width: 65%;
+        text-align: center;
+        font-size: 20px;
       }
     }
 
