--- a/styles.less
+++ b/styles.less
@@ -212,9 +212,44 @@ body {
     }
 
     .about-us {
+      .center();
       width: 100%;
-      height: 1391px;
+      height: 90vh;
       background-color: @DarkGreen;
+
+      .text-about-us {
+        .center();
+        width: 35%;
+        height: 60%;
+
+        article {
+          width: 90%;
+
+          h1 {
+            font-size: 50px;
+            color: @LightGray;
+            margin-bottom: 32px;
+          }
+
+          p {
+            color: @LightGray;
+            font-size: 20px;
+          }
+        }
+      }
+
+      .img-about-us {
+        width: 35%;
+        height: 80%;
+
+        display: flex;
+        justify-content: end;
+
+        img {
+          width: 70%;
+          height: 100%;
+        }
+      }
     }
 
     .quote-call {
