--- a/styles.less
+++ b/styles.less
@@ -253,9 +253,44 @@ body {
     }
 
     .quote-call {
+      .center();
       width: 100%;
-      height: 500px;
-      background-color: red;
+      height: 50vh;
+      background-image: url("img/BANNER-ORÇAMENTO-1.png");
+      background-size: cover;
+
+      .content-quote-call {
+        .center();
+        flex-direction: column;
+        width: 40%;
+        height: 100%;
+
+        article {
+          text-align: center;
+          margin: 0 0 32px 0;
+
+          p {
+            font-size: 20px;
+            color: @LightGray;
+            margin: 16px 0;
+          }
+        }
+
+        button {
+          width: 100%;
+          max-width: 400px;
+          height: 50px;
+          background-color: @Green;
+          border: none;
+          font-size: 24px;
+          color: @LightGray;
+          cursor: pointer;
+
+          &:hover {
+            background-color: @DarkGreen;
+          }
+        }
+      }
     }
 
     .services {
