--- a/styles.less
+++ b/styles.less
@@ -294,9 +294,73 @@ body {
     }
 
     .services {
+      .center();
       width: 100%;
-      height: 1057px;
+      height: 100vh;
       background-color: @LightGray;
+
+      .content-services {
+        .center();
+        flex-direction: column;
+        width: 70%;
+        height: 100%;
+
+        h1 {
+          font-size: 50px;
+          margin: 32px 0;
+        }
+
+        .group-cards-services {
+          display: flex;
+          justify-content: space-between;
+          width: 100%;
+          height: 60%;
+          max-height: 440px;
+          margin: 32px 0;
+
+          .cards-services {
+            width: 22%;
+            max-width: 325px;
+            height: 100%;
+            position: relative;
+
+            p {
+              width: 100%;
+              position: absolute;
+              top: 0;
+              margin: 16px 0;
+              font-size: 28px;
+              text-align: center;
+              color: @LightGray;
+            }
+
+            img {
+              width: 100%;
+              height: 100%;
+            }
+
+            .circle-services {
+              width: 60px;
+              height: 60px;
+              position: absolute;
+              bottom: -8%;
+              right: calc(50% - 30px);
+              background-color: @DarkGreen;
+              border: 4px solid @LightGray;
+              border-radius: 50%;
+            }
+          }
+        }
+
+        article {
+          text-align: center;
+          margin: 32px 0;
+          p {
+            font-size: 20px;
+            margin: 8px 0;
+          }
+        }
+      }
     }
 
     .quote-call-ii {
