--- a/styles.less
+++ b/styles.less
@@ -370,9 +370,73 @@ body {
     }
 
     .benefits {
+      .center();
       width: 100%;
-      height: 858px;
+      height: 100vh;
       background-color: @LightGray;
+
+      .content-benefits {
+        .center();
+        flex-direction: column;
+        width: 70%;
+        height: 100%;
+
+        h1 {
+          font-size: 50px;
+          margin: 32px 0;
+        }
+
+        .group-cards-benefits {
+          display: flex;
+          justify-content: space-evenly;
+          width: 100%;
+          height: 60%;
+          max-height: 400px;
+          margin: 32px 0;
+
+          .cards-benefits {
+            width: 25%;
+            max-width: 287px;
+            height: 100%;
+            position: relative;
+          }
+
+          p {
+            width: 100%;
+            position: absolute;
+            bottom: 10%;
+            font-size: 28px;
+            text-align: center;
+            color: @LightGray;
+          }
+
+          img {
+            width: 100%;
+            height: 100%;
+          }
+
+          .circle-benefits {
+            width: 60px;
+            height: 60px;
+            position: absolute;
+            bottom: -8%;
+            right: calc(50% - 30px);
+            background-color: @SaturedGreen;
+            border: 4px solid @LightGray;
+            border-radius: 50%;
+          }
+        }
+
+        article {
+          width: 35%;
+          text-align: center;
+          margin: 32px 0;
+
+          p {
+            font-size: 20px;
+          }
+        }
+      }
     }
 
     .faq {
@@ -387,15 +451,15 @@ body {
       background-color: @LightGray;
     }
 
-    .portfolio {
+    .portifolio {
       width: 100%;
-      height: 1472px;
-      background-color: @SaturedGreen;
+      height: 100vh;
+      background-color: @DarkGreen;
     }
 
     footer {
       width: 100%;
-      height: 700px;
+      height: 70vh;
       background-color: red;
     }
   }
