--- a/styles.less
+++ b/styles.less
@@ -440,9 +440,96 @@ body {
     }
 
     .faq {
+      .center();
       width: 100%;
-      height: 719px;
+      height: 100vh;
       background-color: @DarkGreen;
+
+      .faq-content {
+        .center();
+        width: 70%;
+        height: 100%;
+
+        .faq-text {
+          .center();
+          width: 50%;
+          height: 100%;
+
+          h1 {
+            font-size: 50px;
+            color: @LightGray;
+          }
+
+          p {
+            width: 80%;
+            margin: 16px 0;
+            font-size: 20px;
+            color: @LightGray;
+          }
+        }
+
+        .faq-questions {
+          display: flex;
+          flex-direction: column;
+          justify-content: space-between;
+          align-items: center;
+          width: 50%;
+          height: 80%;
+
+          .question {
+            .question-content {
+              display: flex;
+              justify-content: space-between;
+              align-items: center;
+              height: 50px;
+              padding: 16px;
+              background-color: @SaturedGreen;
+              cursor: pointer;
+
+              p {
+                color: @LightGray;
+                font-size: 20px;
+              }
+
+              .down {
+                color: @LightGray;
+                transform: rotate(0deg);
+                transition: transform 0.5s;
+
+                &.active {
+                  transform: rotate(180deg);
+                  transition: transform 0.5s;
+                }
+              }
+            }
+
+            .answer {
+              height: 0;
+              transition: height 0.3s;
+              color: @LightGray;
+              font-size: 18px;
+              background-color: @SaturedGreen;
+
+              p {
+                visibility: hidden;
+                opacity: 0;
+                transition: opacity 0.5s, visibility 0.5s;
+              }
+
+              &.active {
+                height: 80px;
+                transition: height 0.3s;
+
+                p {
+                  visibility: visible;
+                  opacity: 1;
+                  transition: opacity 0.5s, visibility 0.5s;
+                }
+              }
+            }
+          }
+        }
+      }
     }
 
     .contacts {
