--- a/styles.less
+++ b/styles.less
@@ -542,7 +542,7 @@ body {
     .contacts {
       .center();
       width: 100%;
-      height: 100vh;
+      height: 80vh;
       background-color: @LightGray;
 
       .contacts-content {
@@ -563,17 +563,15 @@ body {
           height: 65%;
 
           .form {
-            display: flex;
-            flex-direction: column;
-            justify-content: space-around;
-            width: 40%;
+            width: 30%;
+            max-width: 400px;
             height: 100%;
             padding: 32px;
             text-align: center;
-            margin-right: 32px;
             background-color: @SaturedGreen;
 
             h2 {
+              margin: 32px 0;
               color: @LightGray;
               font-size: 30px;
             }
@@ -582,41 +580,67 @@ body {
               margin: 0 auto;
               display: flex;
               flex-direction: column;
+              justify-content: space-between;
               width: 80%;
+              height: 70%;
 
-              input {
-                height: 35px;
-                margin: 8px 0;
-                padding: 8px;
-                border: none;
-              }
-
-              .street-num {
-                display: flex;
-                justify-content: space-between;
+              .group-input {
                 width: 100%;
+                margin-top: 16px;
 
                 input {
-                  &:nth-child(1) {
-                    width: 75%;
+                  width: 100%;
+                  height: 50px;
+                  padding: 8px;
+                  border: none;
+
+                  &::placeholder {
+                    font-size: 16px;
+                  }
+                }
+
+                select {
+                  width: 100%;
+                  height: 50px;
+                  margin: 8px 0;
+                  padding: 8px;
+                  border: none;
+                  font-size: 16px;
+                }
+
+                .check-discard {
+                  .center();
+                  margin: 32px 0;
+
+                  input {
+                    width: 20px;
+                    height: 20px;
+                    cursor: pointer;
                   }
 
-                  &:nth-child(2) {
-                    width: 20%;
+                  label {
+                    margin: 0 8px;
+                    color: @LightGray;
+                    font-size: 20px;
+                    cursor: pointer;
+                  }
+
+                  abbr {
+                    .center();
+
+                    img {
+                      width: 22px;
+                      height: 22px;
+                    }
                   }
                 }
               }
 
-              select {
-                height: 35px;
-                margin: 8px 0;
-                padding: 8px;
-                border: none;
-              }
-
               .form-button {
-                margin: 16px auto 0;
                 width: 50%;
+                height: 50px;
+                margin: 0 auto;
+                border: none;
                 font-size: 18px;
                 font-weight: bold;
                 cursor: pointer;
